# MutationTestingTool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ConfigurationFile.cpp  ConfigurationFile.h  Execute.cpp  Execute.h  FileOperation.cpp  FileOperation.h  LICENSE  Makefile  MiscEnums.h  MutateFactory.cpp  MutateFactory.h  MutateOperation.cpp  MutateOperation.h  MutateOperationFactory.cpp  MutateOperationFactory.h  Mutation Testing Tool.pptx  MutationTestingTool.sln  MutationTestingTool.vcxproj  MutationTestingTool.vcxproj.filters  README.md  ReplaceBoolean.cpp  ReplaceEquals.h  ReplaceInsertWithIndex.cpp  ReplaceIntegers.cpp  ReplaceIntegers.h  Report.cpp  Report.h  a.out  config.txt  configuration.json  main.cpp  packages.config
INC/: ConfigurationFactory.h  ConfigurationFile.h  ConfigurationJSONParser.h  ConfigurationManager.h  ConfigurationOperation.h  ConfigurationParser.h  Execute.h  FileOperation.h  MiscEnums.h  MutateFactory.h  MutateManager.h  MutateOperation.h  MutateOperationFactory.h  ReplaceAddition.h  ReplaceBoolean.h  ReplaceDecrement.h  ReplaceDivision.h  ReplaceDivisionWithMinus.h  ReplaceDivisionWithMultiplication.h  ReplaceDivisionWithPlus.h  ReplaceEquals.h  ReplaceIncrement.h  ReplaceInsertWithIndex.h  ReplaceIntegers.h  ReplaceMinusWithDivision.h  ReplaceMinusWithMultiplication.h  ReplaceMinusWithPlus.h  ReplaceMultiplication.h  ReplaceMultiplicationWithDivision.h  ReplaceMultiplicationWithMinus.h  ReplaceMultiplicationWithPlus.h  ReplacePlusWithDivision.h  ReplacePlusWithMinus.h  ReplacePlusWithMultiplication.h  ReplaceSubtraction.h  Report.h
SRC/: ConfigurationFactory.cpp  ConfigurationFile.cpp  ConfigurationParser.cpp  (+34 more)
TESTS/: CMakeLists.txt  MergeSort.cpp  QuickSort.cpp  Utils.cpp  Utils.h  main.cpp
(+1 files in other folders)
